backends/drm: try to handle page flips timing out

While this should really never happen in the first place, if the kernel still accepts
atomic commits, this is better than the screen(s) freezing and never recovering.

BUG: 480895


(cherry picked from commit 14749e91e962935fe9ad6b3358ec720c3645e8ea)